Fixed PhotoDetail CSS on mobile devices along with a few otherdetails

--- a/ui/src/static/css/App.css
+++ b/ui/src/static/css/App.css
@@ -85,3 +85,10 @@ footer {
     height: 330px;
   }
 }
+
+@media only screen and (max-device-width: 1024px) {
+  .react-router-modal__container {
+    -webkit-transform: none;
+    transform: none;
+  }
+}
